--- a/two_columt_template/cv_tm.tex
+++ b/two_columt_template/cv_tm.tex
@@ -73,7 +73,7 @@
 %	TITLE
 %----------------------------------------------------------------------------------------
 
-\par{\centering{\sffamily\Huge John Smith}\\ % Your name
+\par{\centering{\sffamily\Huge Tautvydas Misiunas}\\ % Your name
 {\color{headings}\fontspec[Variant = 2]{Zapfino} Curriculum {Vit\fontspec[Variant = 3]{Zapfino}\ae}\\[15pt]\par} % Curriculum vitae text in the Zapfino font
 	
 %----------------------------------------------------------------------------------------
@@ -91,56 +91,45 @@
 % WORK EXPERIENCE 1
 %------------------------------------------------
 
-{\raggedleft\textsc{Current, from Jan 2009}\par}
+{\raggedleft\textsc{Current, from Oct 2014}\par}
 
-{\raggedright\large Trader at Enoi s.p.a., Milan\\
-\textit{Physical Natural Gas Trading}\\[5pt]}
+{\raggedright\large Software development engineer\\
+\textit{Amazon}, Edinburgh, United Kingdom\\[5pt]}
 
-\normalsize{Provided analysis of spreads, in particular time and location spreads, with emphasis on trading opportunities on the curve, also taking into account the availability of storage facilities. Became familiar with logistic implications of physical gas trading and developed knowledge of continental virtual hubs for gas exchange.}\\
+\normalsize{Focused on the backend work of massive scale projects. To ensure service scaling and high performance standards under heavy load, I developed a flexible testing framework. As a result, the services performed as predicted during Black Friday and Cyber Monday. I also prototyped machine learning models for content optimisation on Amazon gateway, dynamical filtering of adult content and language inference based on book snippets. Customer impact of major updates was rigorously evaluated with A/B testing, allowing to iterate over ideas fast and backup analysis with numbers. For example, a new widget that I worked on proved to generate \$11M worldwide.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
 %------------------------------------------------
 
-{\raggedleft\textsc{July 2008 -- Oct 2008}\par}
+{\raggedleft\textsc{Nov 2012 – Aug 2013}\par}
 
-{\raggedright\large 1\textsuperscript{st} year Analyst at \textsc{Lehman Brothers}, London\\
-\textit{Commodities Structured Trading}\\[5pt]}
+{\raggedright\large Software developer\\
+\textit{Ocado}, London, United Kingdom\\[5pt]}
 
-\normalsize{Developed spreadsheets for risk analysis on exotic derivatives on a wide array of commodities (ags, oils, precious and base metals), managed blotter and secondary trades on structured notes, liaised with Middle Office, Sales and Structuring for bookkeeping.}\\
+\normalsize{Having strong mathematical skills I joined the MHE control team at Ocado, providing reliable real-time Java application responsible for control over sixty interconnected cranes and conveyors and communicating with Oracle database as well as other services. For example, I developed a monitoring optimisation module that detects idle machines and optimises item distribution among them. In order to make the module compliant with tight constraints of a real-time application I improved the routing algorithm of the continuously changing warehouse hundred fold. This level of performance jump was achieved by extracting a super-graph with a graph clusterring algorithm (Markov Cluster Algorithm).}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
 %------------------------------------------------
 
-{\raggedleft\textsc{Summer 2007}\par}
+{\raggedleft\textsc{Sep 2010 - June 2011}\par}
 
-{\raggedright\large Summer Intern at \textsc{Lehman Brothers}\\
-\textit{Capital Markets}\\[5pt]}
+{\raggedright\large Research assistant\\
+\textit{Center for Physical Sciences and Technology}, Vilnius, Lithuania\\[5pt]}
 
-\normalsize{Received pre-placed offer from the Exotics Trading Desk as a result of very positive review. Rated ``truly distinctive" for Analytical Skills and Teamwork.}\\
+\normalsize{Under the supervision of Prof. E. Tornau, I developed computational model to explain and predict the behaviour of triangular-shaped molecules. We have extended existing phase models, such as Potts, Blume-Emery-Griffits, to support molecule's ability to settle down on the lattice. The model successfully explained two structures which were observed in experiments and predicted a new structure.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 4
 %------------------------------------------------
 
-{\raggedleft\textsc{Current, from Jan 2009}\par}
+{\raggedleft\textsc{Current, from July 2012}\par}
 
-{\raggedright\large Trader at Enoi s.p.a., Milan\\
-\textit{Physical Natural Gas Trading}\\[5pt]}
+{\raggedright\large Android games\\
+\textit{Mobile app}\\[5pt]}
 
-\normalsize{Provided analysis of spreads, in particular time and location spreads, with emphasis on trading opportunities on the curve, also taking into account the availability of storage facilities. Became familiar with logistic implications of physical gas trading and developed knowledge of continental virtual hubs for gas exchange.}\\
-
-%------------------------------------------------
-% WORK EXPERIENCE 5
-%------------------------------------------------
-
-{\raggedleft\textsc{July 2008 -- Oct 2008}\par}
-
-{\raggedright\large 1\textsuperscript{st} year Analyst at \textsc{Lehman Brothers}, London\\
-\textit{Commodities Structured Trading}\\[5pt]}
-
-\normalsize{Developed spreadsheets for risk analysis on exotic derivatives on a wide array of commodities (ags, oils, precious and base metals), managed blotter and secondary trades on structured notes, liaised with Middle Office, Sales and Structuring for bookkeeping.}\\
+\normalsize{I co-created two Android games that are free to download. Over the years I have been keeping the applications up to date with new releases and support for new Android versions. Both applications are very successful with over 1M total downloads.}\\
 
 %----------------------------------------------------------------------------------------	
 
@@ -155,10 +144,10 @@
 
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & 123 Broadway, City, State 12345 \\ % Address
-\raisebox{-3pt}{\Mobilefone} & +1 (1)23 4567890 \\ % Phone number
-\raisebox{-1pt}{\Letter} & \href{mailto:john@smith.com}{john@smith.com} \\ % Email address
-\Keyboard & \href{http://www.johnsmith.com}{http://www.johnsmith.com} \\ % Website
+\raisebox{-4pt}{\textifsymbol{18}} & 21/5 Barony, Edinburgh, EH3 6PD, UK \\ % Address
+\raisebox{-3pt}{\Mobilefone} & +44 7 585 234 606 \\ % Phone number
+\raisebox{-1pt}{\Letter} & \href{mailto:tautvydas.misiunas@gmail.com}{tautvydas.misiunas@gmail.com} \\ % Email address
+%\Keyboard & \href{http://www.johnsmith.com}{http://www.johnsmith.com} \\ % Website
 \end{tabular}
 }
 }\\[10pt]
@@ -171,61 +160,45 @@
 
 \begin{tabular}{rl} % Start a table with two columns, one for dates and one for qualifications
 
-%------------------------------------------------
-% EDUCATION 1
-%------------------------------------------------
-
-2011 -- \textsc{Present} & \textbf{Doctor of Philosophy} \\ 
-& \textsc{Computer Science} \\ 
-& \textit{The University of California}\\
+2014 & \textbf{Master of Science} \\ 
+& \small Distiction, 3.9 GPA \\
+& \textsc{Artificial Intelligence} \\ 
+& \textit{The University of Edinburgh}\\
 &\\
-	 
-%------------------------------------------------
-% EDUCATION 2
-%------------------------------------------------
 
-2010 & \textbf{Master of Science} \\ 
-& \small First Class Honours \\
-& \textsc{Computer Science} \\ 
-& \textit{The University of California}\\
-&\\
-	 
-%------------------------------------------------
-% EDUCATION 3
-%------------------------------------------------
-
-2009 & \textbf{Postgraduate Diploma}\\
-& \small Distinction \\
-& \textsc{Computer Science} \\
-& \textit{The University of California}\\
-&\\
-	 
-%------------------------------------------------
-% EDUCATION 4
-%------------------------------------------------
-
-2006 -- 2008 & \textbf{Bachelor of Business Studies}\\
-& \textsc{Commerce} \\
-& \textit{The University of California} 
+2008 -- 2012 & \textbf{Bachelor degree}\\
+& \small Overall mark - 84\% \\
+& \textsc{Physics} \\ 
+& \textit{Vilnius University} 
 	
 %----------------------------------------------------------------------------------------
 
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
-%	AWARDS
+%	PROJECTS
 %----------------------------------------------------------------------------------------
 
-\section{Awards} 
+\section{Projects} 
 
 \begin{tabular}{rl}
-2010	 & \textbf{Faculty of Science Masters Scholarship}\\
-& \textit{The University of California}\\ \\
+2014	 & \textbf{Short term movements in stock prices}\\
+& \textit{Kaggle}
 
-%------------------------------------------------
+\end{tabular}\\[10pt]
 
-2008	 & \textbf{Top Achiever Award -- Commerce}\\
-& \textit{Business Association of California}
+%----------------------------------------------------------------------------------------
+%	PUBLICATIONS
+%----------------------------------------------------------------------------------------
+
+\section{Publications} 
+
+\begin{tabular}{rl}
+2012	 & \textbf{Ordered assemblies of triangular-shaped} \\
+         & \textbf{molecules with strongly interacting vertices:}\\
+         & \textbf{phase diagrams for honeycomb and zigzag}\\
+         & \textbf{structures on triangular lattice} \\
+& \textit{The journal of physical chemistry. B}
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
@@ -236,14 +209,14 @@
 
 \begin{tabular}{rl}
 Basic Knowledge
-& \textsc{java}, Adobe Illustrator\\ 
+& \textsc{c++}, \textsc{bash}\\ 
+& OpenOffice
 & \\
-Intermediate Knowledge
-& \textsc{python}, \textsc{html}, \LaTeX,\\
-& OpenOffice, Linux,\\
+Advanced Knowledge
+& \textsc{java}, \textsc{python}, \LaTeX,\\
+, Linux,\\
 & Microsoft Windows \\
-& Computer Hardware \& \\
-& Support\\ \\
+& Machine learning
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -254,12 +227,9 @@ Intermediate Knowledge
 
 \begin{tabular}{rl}
 \textsc{Conferences}
-& Oral Presentation at the California \\
-& Computer Science Conference -- 2010\\
+& Amazon Machine \\
+& Learning Conference -- 2015\\
 & \\
-\textsc{Posters}
-& Poster at the Annual Programming \\
-& Conference in Oregon -- 2009 \\
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
