--- a/two_columt_template/cv_tm.tex
+++ b/two_columt_template/cv_tm.tex
@@ -183,7 +183,10 @@
 
 \begin{tabular}{rl}
 2014	 & \textbf{Short term movements in stock prices}\\
-& \textit{Kaggle}
+& \textit{Kaggle}\\
+&\\
+2015     & \textbf{Amazon internal mobile hackaton}\\
+& \textit{Amazon}
 
 \end{tabular}\\[10pt]
 
@@ -209,12 +212,12 @@
 
 \begin{tabular}{rl}
 Basic Knowledge
-& \textsc{c++}, \textsc{bash}\\ 
-& OpenOffice
+& \textsc{c++}, \textsc{bash},\\ 
+& OpenOffice\\
 & \\
 Advanced Knowledge
-& \textsc{java}, \textsc{python}, \LaTeX,\\
-, Linux,\\
+& \textsc{java}, \textsc{python},\\
+& \LaTeX, Linux,\\
 & Microsoft Windows \\
 & Machine learning
 \end{tabular}
