Trimmed Ocado description.

--- a/two_columt_template/cv_tm.tex
+++ b/two_columt_template/cv_tm.tex
@@ -107,7 +107,8 @@
 {\raggedright\large Software developer\\
 \textit{Ocado}, London, United Kingdom\\[5pt]}
 
-\normalsize{Having strong mathematical skills I joined the MHE control team at Ocado, providing reliable real-time Java application responsible for control over sixty interconnected cranes and conveyors and communicating with Oracle database as well as other services. For example, I developed a monitoring optimisation module that detects idle machines and optimises item distribution among them. In order to make the module compliant with tight constraints of a real-time application I improved the routing algorithm of the continuously changing warehouse hundred fold. This level of performance jump was achieved by extracting a super-graph with a graph clusterring algorithm (Markov Cluster Algorithm).}\\
+\normalsize{Java backend developer on MHE control team at Ocado, providing reliable real-time Java application responsible for control over sixty interconnected cranes and conveyors. Developed an optimisation module which exploits idle machines to improve physical inventory distribution. The module required improved routing routine within a continuously changing warehouse. 
+Developed an unsupervised super-graph extraction (via Markov Clustering  Algorithm) based routing algorithm.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
