--- a/two_columt_template/cv_tm.tex
+++ b/two_columt_template/cv_tm.tex
@@ -96,7 +96,7 @@
 {\raggedright\large Software development engineer\\
 \textit{Amazon}, Edinburgh, United Kingdom\\[5pt]}
 
-\normalsize{Focused on the backend work of massive scale projects. To ensure service scaling and high performance standards under heavy load, I developed a flexible testing framework. As a result, the services performed as predicted during Black Friday and Cyber Monday. I also prototyped machine learning models for content optimisation on Amazon gateway, dynamical filtering of adult content and language inference based on book snippets. Customer impact of major updates was rigorously evaluated with A/B testing, allowing to iterate over ideas fast and backup analysis with numbers. For example, a new widget that I worked on proved to generate \$11M worldwide.}\\
+\normalsize{Focused on the back-end work of massive scale projects. To ensure service scaling and high performance standards under heavy load, I developed a flexible testing framework. As a result, the services performed as predicted during Black Friday and Cyber Monday. I also prototyped machine learning models for content optimization on Amazon gateway, dynamical filtering of adult content and language inference based on book snippets. Customer impact of major updates was rigorously evaluated with A/B testing, allowing to iterate over ideas fast and backup analysis with numbers. For example, a new widget that I worked on proved to generate \$11M worldwide.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
@@ -107,8 +107,8 @@
 {\raggedright\large Software developer\\
 \textit{Ocado}, London, United Kingdom\\[5pt]}
 
-\normalsize{Java backend developer on MHE control team at Ocado, providing reliable real-time Java application responsible for control over sixty interconnected cranes and conveyors. Developed an optimisation module which exploits idle machines to improve physical inventory distribution. The module required improved routing routine within a continuously changing warehouse. 
-Developed an unsupervised super-graph extraction (via Markov Clustering  Algorithm) based routing algorithm.}\\
+\normalsize{Java back-end developer on MHE control team at Ocado, providing reliable real-time Java application responsible for control over sixty interconnected cranes and conveyors. Developed an optimization module which exploits idle machines to improve physical inventory distribution. The module required improved routing routine within a continuously changing warehouse. 
+Developed an unsupervised super-graph extraction (via Markov Clustering  Algorithm) based routing Algorithm.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
@@ -119,7 +119,7 @@ Developed an unsupervised super-graph extraction (via Markov Clustering  Algorit
 {\raggedright\large Research assistant\\
 \textit{Center for Physical Sciences and Technology}, Vilnius, Lithuania\\[5pt]}
 
-\normalsize{Under the supervision of Prof. E. Tornau, I developed computational model to explain and predict the behaviour of triangular-shaped molecules. We have extended existing phase models, such as Potts, Blume-Emery-Griffits, to support molecule's ability to settle down on the lattice. The model successfully explained two structures which were observed in experiments and predicted a new structure.}\\
+\normalsize{Under the supervision of Prof. E. Tornau, I developed computational model to emulate the behavior of triangular-shaped molecules. We have extended existing phase models, such as Potts and Blume-Emery-Griffits, to support molecule's ability to settle down on the lattice. The model successfully explained two structures which were observed in experiments. Furthermore, the model predicted a new structure and defined under what circumstances it forms.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 4
@@ -130,7 +130,7 @@ Developed an unsupervised super-graph extraction (via Markov Clustering  Algorit
 {\raggedright\large Android games\\
 \textit{Mobile app}\\[5pt]}
 
-\normalsize{I co-created two Android games that are free to download. Over the years I have been keeping the applications up to date with new releases and support for new Android versions. Both applications are very successful with over 1M total downloads.}\\
+\normalsize{I co-created two Android games that are free to download. Over the years I have been keeping the applications up to date with new releases and support for new Android versions. Both applications are very successful with over a million downloads.}\\
 
 %----------------------------------------------------------------------------------------	
 
@@ -162,7 +162,7 @@ Developed an unsupervised super-graph extraction (via Markov Clustering  Algorit
 \begin{tabular}{rl} % Start a table with two columns, one for dates and one for qualifications
 
 2014 & \textbf{Master of Science} \\ 
-& \small Distiction, 3.9 GPA \\
+& \small Distinction, 3.9 GPA \\
 & \textsc{Artificial Intelligence} \\ 
 & \textit{The University of Edinburgh}\\
 &\\
