Updated Amazon description

--- a/two_columt_template/cv_tm.tex
+++ b/two_columt_template/cv_tm.tex
@@ -96,15 +96,17 @@
 {\raggedright\large Software development engineer\\
 \textit{Amazon}, Edinburgh, United Kingdom\\[5pt]}
 
-\normalsize{Focused on the back-end work of massive scale projects. 
-To ensure service scaling and high performance standards under heavy load, 
-I developed a flexible testing framework. 
-As a result, the services performed as predicted during Black Friday and Cyber Monday. 
-I also prototyped machine learning models for content optimization on Amazon gateway, 
-dynamical filtering of adult content and language inference based on book snippets. 
-Customer impact of major updates was rigorously evaluated with A/B testing, 
-allowing to iterate over ideas fast and backup analysis with numbers. 
-For example, a new widget that I worked on proved to generate \$11M worldwide.}\\
+\normalsize{Worked on the Dynamic Merchandising team 
+which provides personalized content on Amazon services worldwide.
+Extended, a heavily human heuristics based, recommendation 
+ranking system with machine learning models allowing flexible 
+optimization as well as better customer experience via accurate personalization.
+Quickly prototyped new models and performed analysis in python 
+while productionising best performing ideas in java.
+Developed smaller projects to detect adult content and to infer book language from the title.
+As part of massive and critical service I built tools that performed 
+automated load tests pushing the service to the limit. 
+This work ensured that on Cyber Monday Amazon worked without any glitches.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
