Flipped project to have chronological order like the rest of CV.

--- a/two_columt_template/cv_tm.tex
+++ b/two_columt_template/cv_tm.tex
@@ -208,11 +208,12 @@ Both applications are very successful with over a million downloads.}\\
 \section{Projects} 
 
 \begin{tabular}{rl}
-2014	 & \textbf{Short term movements in stock prices}\\
-& \textit{Kaggle}\\
-&\\
+
 2015     & \textbf{Amazon internal mobile hackaton}\\
-& \textit{Amazon}
+& \textit{Amazon}\\
+&\\
+2014	 & \textbf{Short term movements in stock prices}\\
+& \textit{Kaggle}
 
 \end{tabular}\\[10pt]
 
