Minor refactors to CV.

--- a/two_columt_template/cv_tm.tex
+++ b/two_columt_template/cv_tm.tex
@@ -119,12 +119,12 @@ This work ensured that on Cyber Monday Amazon worked without any glitches.}\\
 
 \normalsize{Java back-end developer on MHE control team at Ocado, 
 providing reliable real-time Java application responsible for 
-control over sixty interconnected cranes and conveyors. 
+control over sixty interconnected conveyors and cranes. 
 Developed an optimization module which exploits idle machines 
 to improve physical inventory distribution. 
 The module required improved routing routine within a continuously changing warehouse. 
 Developed an unsupervised super-graph extraction 
-(via Markov Clustering  Algorithm) based routing Algorithm.}\\
+(via Markov Clustering  Algorithm) based routing algorithm.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
@@ -143,11 +143,12 @@ to support molecule's ability to settle down on the lattice.
 The model successfully explained two structures which were observed in experiments. 
 Furthermore, the model predicted a new structure and defined under what circumstances it forms.}\\
 
+
 %------------------------------------------------
 % WORK EXPERIENCE 4
 %------------------------------------------------
 
-{\raggedleft\textsc{Current, from July 2012}\par}
+{\raggedleft\textsc{July 2012}\par}
 
 {\raggedright\large Android games\\
 \textit{Mobile app}\\[5pt]}
@@ -218,37 +219,22 @@ Both applications are very successful with over a million downloads.}\\
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
-%	PUBLICATIONS
-%----------------------------------------------------------------------------------------
-
-\section{Publications} 
-
-\begin{tabular}{rl}
-2012	 & \textbf{Ordered assemblies of triangular-shaped} \\
-         & \textbf{molecules with strongly interacting vertices:}\\
-         & \textbf{phase diagrams for honeycomb and zigzag}\\
-         & \textbf{structures on triangular lattice} \\
-& \textit{The journal of physical chemistry. B}
-\end{tabular}\\[10pt]
-
-%----------------------------------------------------------------------------------------
 %	COMPUTER SKILLS
 %----------------------------------------------------------------------------------------
 
-\section{Computer Skills} 
+\section{Technical Skills} 
 
 \begin{tabular}{rl}
 Basic Knowledge
-& \textsc{c++}, \textsc{bash},\\ 
-& OpenOffice\\
+& \textsc{c++}, \textsc{bash},\\
 & \\
 Advanced Knowledge
 & \textsc{java}, \textsc{python},\\
-& \LaTeX, Linux,\\
-& Microsoft Windows \\
-& Machine learning
+& \textsc{Matlab}, \LaTeX, Linux,\\
+& Machine learning, \textsc{scikit-learn}, \textsc{theano}
 \end{tabular}
 
+\textit{add more python ml packages for data science. Focus on projects that I did with ML in Amazon. Be more elaborate on University courses and specialisation.}
 %----------------------------------------------------------------------------------------
 %	COMMUNICATION SKILLS
 %----------------------------------------------------------------------------------------
@@ -260,6 +246,20 @@ Advanced Knowledge
 & Amazon Machine \\
 & Learning Conference -- 2015\\
 & \\
+\end{tabular}\\[10pt]
+
+%----------------------------------------------------------------------------------------
+%	PUBLICATIONS
+%----------------------------------------------------------------------------------------
+
+\section{Publications} 
+
+\begin{tabular}{rl}
+2012	 & \textbf{Ordered assemblies of triangular-shaped} \\
+         & \textbf{molecules with strongly interacting vertices:}\\
+         & \textbf{phase diagrams for honeycomb and zigzag}\\
+         & \textbf{structures on triangular lattice} \\
+& \textit{The journal of physical chemistry. B}
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
