Cleaned up technical version.

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -229,12 +229,11 @@ Basic Knowledge
 & \textsc{c++}, \textsc{bash},\\
 & \\
 Advanced Knowledge
-& \textsc{java}, \textsc{python},\\
-& \textsc{Matlab}, \LaTeX, Linux,\\
-& Machine learning, \textsc{scikit-learn}, \textsc{theano}
+& \textsc{java}, \textsc{python},Linux,\\
+& \textsc{Jenkins}, Maven, Gradle,\\
+& Machine learning, \textsc{scikit-learn}
 \end{tabular}
 
-\textit{add more python ml packages for data science. Focus on projects that I did with ML in Amazon. Be more elaborate on University courses and specialisation.}
 %----------------------------------------------------------------------------------------
 %	COMMUNICATION SKILLS
 %----------------------------------------------------------------------------------------
