Add LinkedIn link to the sde version.

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -59,6 +59,9 @@
 
 \usepackage{titlesec} % Allows creating custom \section's
 
+% Tautvydas customisation
+\usepackage{fontawesome}
+
 % Format of the section titles
 \titleformat{\section}{\color{headings}
 \scshape\Large\raggedright}{}{0em}{}[\color{black}\titlerule]
@@ -171,10 +174,10 @@ Both applications are very successful with over a million downloads.}\\
 
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & 21/5 Barony, Edinburgh, EH3 6PD, UK \\ % Address
-\raisebox{-3pt}{\Mobilefone} & +44 7 585 234 606 \\ % Phone number
-\raisebox{-1pt}{\Letter} & \href{mailto:tautvydas.misiunas@gmail.com}{tautvydas.misiunas@gmail.com} \\ % Email address
-%\Keyboard & \href{http://www.johnsmith.com}{http://www.johnsmith.com} \\ % Website
+\raisebox{-4pt}{\textifsymbol{18}} & 21/5 Barony, Edinburgh, EH3 6PD, UK \\ 
+\raisebox{-3pt}{\Mobilefone} & +44 7 585 234 606 \\ 
+\raisebox{-1pt}{\Letter} & \href{mailto:tautvydas.misiunas@gmail.com}{tautvydas.misiunas@gmail.com} \\
+\faLinkedin & \href{https://www.linkedin.com/pub/tautvydas-misiunas/26/b62/745}{Tautvydas} \\ 
 \end{tabular}
 }
 }\\[10pt]
@@ -188,7 +191,7 @@ Both applications are very successful with over a million downloads.}\\
 \begin{tabular}{rl} % Start a table with two columns, one for dates and one for qualifications
 
 2014 & \textbf{Master of Science} \\ 
-& \small Distinction, 3.9 GPA \\
+& \small Distinction\\
 & \textsc{Artificial Intelligence} \\ 
 & \textit{The University of Edinburgh}\\
 &\\
