SDE version: Expand Skills and Education section.

--- a/two_columt_template/cv_tm_academic.tex
+++ b/two_columt_template/cv_tm_academic.tex
@@ -231,7 +231,8 @@ Basic Knowledge
 Advanced Knowledge
 & \textsc{java}, \textsc{python},\\
 & \textsc{Matlab}, \LaTeX, Linux,\\
-& Machine learning, \textsc{scikit-learn}, \textsc{theano}
+& Machine learning, \textsc{Weka},\\
+& \textsc{scikit-learn}, \textsc{theano}
 \end{tabular}
 
 \textit{add more python ml packages for data science. Focus on projects that I did with ML in Amazon. Be more elaborate on University courses and specialisation.}
