--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -193,13 +193,15 @@ Both applications are very successful with over a million downloads.}\\
 2014 & \textbf{Master of Science} \\ 
 & \small Distinction\\
 & \textsc{Artificial Intelligence} \\ 
-& \textit{The University of Edinburgh}\\
+& \textit{The University of Edinburgh} \\
+& \small Focus on ML and data analysis. \\
 &\\
 
 2008 -- 2012 & \textbf{Bachelor degree}\\
 & \small Overall mark - 84\% \\
 & \textsc{Physics} \\ 
-& \textit{Vilnius University} 
+& \textit{Vilnius University} \\
+& \small Focus on math and theoretical physics. \\
 	
 %----------------------------------------------------------------------------------------
 
@@ -228,13 +230,15 @@ Both applications are very successful with over a million downloads.}\\
 \section{Technical Skills} 
 
 \begin{tabular}{rl}
-Basic Knowledge
-& \textsc{c++}, \textsc{bash},\\
+Software development
+& \textsc{java}, \textsc{python}, Linux,\\
+& \textsc{jenkins}, maven, gradle,\\
+& \textsc{c++}, \textsc{bash}, \textsc{AWS}\\
+Machine learning
+& \textsc{scikit-learn}, \textsc{theano},\\
+& \textsc{weka}, \textsc{hadoop},\\
+& \textsc{Amazon EML \& EMR} \\
 & \\
-Advanced Knowledge
-& \textsc{java}, \textsc{python},Linux,\\
-& \textsc{Jenkins}, Maven, Gradle,\\
-& Machine learning, \textsc{scikit-learn}
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
