Add Matlab, Octane

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -235,6 +235,7 @@ Software development
 & \textsc{jenkins}, maven, gradle,\\
 & \textsc{c++}, \textsc{bash}, \textsc{AWS}\\
 Machine learning
+& \textsc{Matlab}, \textsc{Octane},\\
 & \textsc{scikit-learn}, \textsc{theano},\\
 & \textsc{weka}, \textsc{hadoop},\\
 & \textsc{Amazon EML \& EMR} \\
