--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -218,7 +218,10 @@ Both applications are very successful with over a million downloads.}\\
 2015     & \textbf{Amazon internal mobile hackaton}\\
 & \textit{Amazon}\\
 &\\
-2014	 & \textbf{Short term movements in stock prices}\\
+2014     & \textbf{Msc thesis: Recommendation system for MMO games}\\
+& \textit{The University of Edinburgh \& deltaDNA}\\
+&\\
+2013	 & \textbf{Short term movements in stock prices}\\
 & \textit{Kaggle}
 
 \end{tabular}\\[10pt]
@@ -235,9 +238,8 @@ Software development
 & \textsc{jenkins}, maven, gradle,\\
 & \textsc{c++}, \textsc{bash}, \textsc{AWS}\\
 Machine learning
-& \textsc{Matlab}, \textsc{Octane},\\
-& \textsc{scikit-learn}, \textsc{theano},\\
-& \textsc{weka}, \textsc{hadoop},\\
+& \textsc{Matlab}, \textsc{Octane}, \textsc{hadoop},\\
+& \textsc{scikit-learn}, \textsc{theano}, \textsc{weka},\\
 & \textsc{Amazon EML \& EMR} \\
 & \\
 \end{tabular}
@@ -252,7 +254,6 @@ Machine learning
 \textsc{Conferences}
 & Amazon Machine \\
 & Learning Conference -- 2015\\
-& \\
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
