Update address and phone number.

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -15,7 +15,7 @@
 % default. If you get compilation errors saying a font is missing, find the line
 % on which the font is used and either change it to a font included with your
 % operating system or comment the line out to use the default font.
-% 
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %----------------------------------------------------------------------------------------
@@ -78,17 +78,17 @@
 
 \par{\centering{\sffamily\Huge Tautvydas Misiunas}\\ % Your name
 {\color{headings}\fontspec[Variant = 2]{Zapfino} Curriculum {Vit\fontspec[Variant = 3]{Zapfino}\ae}\\[15pt]\par} % Curriculum vitae text in the Zapfino font
-	
+
 %----------------------------------------------------------------------------------------
 
 \begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
 \vspace{0pt} % Trick for alignment
-	
+
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
 
-\section{Work Experience} 
+\section{Work Experience}
 
 %------------------------------------------------
 % WORK EXPERIENCE 1
@@ -99,16 +99,16 @@
 {\raggedright\large Software development engineer\\
 \textit{Amazon}, Edinburgh, United Kingdom\\[5pt]}
 
-\normalsize{Worked on the Dynamic Merchandising team 
+\normalsize{Worked on the Dynamic Merchandising team
 which provides personalized content on Amazon services worldwide.
-Extended, a heavily human heuristics based, recommendation 
-ranking system with machine learning models allowing flexible 
+Extended, a heavily human heuristics based, recommendation
+ranking system with machine learning models allowing flexible
 optimization as well as better customer experience via accurate personalization.
-Quickly prototyped new models and performed analysis in python 
+Quickly prototyped new models and performed analysis in python
 while productionising best performing ideas in java.
 Developed smaller projects to detect adult content and to infer book language from the title.
-As part of massive and critical service I built tools that performed 
-automated load tests pushing the service to the limit. 
+As part of massive and critical service I built tools that performed
+automated load tests pushing the service to the limit.
 This work ensured that on Cyber Monday Amazon worked without any glitches.}\\
 
 %------------------------------------------------
@@ -120,13 +120,13 @@ This work ensured that on Cyber Monday Amazon worked without any glitches.}\\
 {\raggedright\large Software developer\\
 \textit{Ocado}, London, United Kingdom\\[5pt]}
 
-\normalsize{Java back-end developer on MHE control team at Ocado, 
-providing reliable real-time Java application responsible for 
-control over sixty interconnected conveyors and cranes. 
-Developed an optimization module which exploits idle machines 
-to improve physical inventory distribution. 
-The module required improved routing routine within a continuously changing warehouse. 
-Developed an unsupervised super-graph extraction 
+\normalsize{Java back-end developer on MHE control team at Ocado,
+providing reliable real-time Java application responsible for
+control over sixty interconnected conveyors and cranes.
+Developed an optimization module which exploits idle machines
+to improve physical inventory distribution.
+The module required improved routing routine within a continuously changing warehouse.
+Developed an unsupervised super-graph extraction
 (via Markov Clustering  Algorithm) based routing algorithm.}\\
 
 %------------------------------------------------
@@ -138,12 +138,12 @@ Developed an unsupervised super-graph extraction
 {\raggedright\large Research assistant\\
 \textit{Center for Physical Sciences and Technology}, Vilnius, Lithuania\\[5pt]}
 
-\normalsize{Under the supervision of Prof. E. Tornau, 
-I developed computational model to emulate the behavior 
-of triangular-shaped molecules. We have extended existing 
-phase models, such as Potts and Blume-Emery-Griffits, 
-to support molecule's ability to settle down on the lattice. 
-The model successfully explained two structures which were observed in experiments. 
+\normalsize{Under the supervision of Prof. E. Tornau,
+I developed computational model to emulate the behavior
+of triangular-shaped molecules. We have extended existing
+phase models, such as Potts and Blume-Emery-Griffits,
+to support molecule's ability to settle down on the lattice.
+The model successfully explained two structures which were observed in experiments.
 Furthermore, the model predicted a new structure and defined under what circumstances it forms.}\\
 
 
@@ -156,12 +156,12 @@ Furthermore, the model predicted a new structure and defined under what circumst
 {\raggedright\large Android games\\
 \textit{Mobile app}\\[5pt]}
 
-\normalsize{I co-created two Android games that are free to download. 
-Over the years I have been keeping the applications up to date with 
-new releases and support for new Android versions. 
+\normalsize{I co-created two Android games that are free to download.
+Over the years I have been keeping the applications up to date with
+new releases and support for new Android versions.
 Both applications are very successful with over a million downloads.}\\
 
-%----------------------------------------------------------------------------------------	
+%----------------------------------------------------------------------------------------
 
 \end{minipage} % End the left-hand side of the page
 \hfill
@@ -174,10 +174,10 @@ Both applications are very successful with over a million downloads.}\\
 
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & 21/5 Barony, Edinburgh, EH3 6PD, UK \\ 
-\raisebox{-3pt}{\Mobilefone} & +44 7 585 234 606 \\ 
+\raisebox{-4pt}{\textifsymbol{18}} & 819 Hamilton street, Vancouver, BC, Canada \\
+\raisebox{-3pt}{\Mobilefone} & +1 778 835 6923 \\
 \raisebox{-1pt}{\Letter} & \href{mailto:tautvydas.misiunas@gmail.com}{tautvydas.misiunas@gmail.com} \\
-\faLinkedin & \href{https://www.linkedin.com/pub/tautvydas-misiunas/26/b62/745}{Tautvydas} \\ 
+\faLinkedin & \href{https://www.linkedin.com/pub/tautvydas-misiunas/26/b62/745}{Tautvydas} \\
 \end{tabular}
 }
 }\\[10pt]
@@ -186,23 +186,23 @@ Both applications are very successful with over a million downloads.}\\
 %	EDUCATION
 %----------------------------------------------------------------------------------------
 
-\section{Education} 
+\section{Education}
 
 \begin{tabular}{rl} % Start a table with two columns, one for dates and one for qualifications
 
-2014 & \textbf{Master of Science} \\ 
+2014 & \textbf{Master of Science} \\
 & \small Distinction\\
-& \textsc{Artificial Intelligence} \\ 
+& \textsc{Artificial Intelligence} \\
 & \textit{The University of Edinburgh} \\
 & \small Focus on ML and data analysis. \\
 &\\
 
 2008 -- 2012 & \textbf{Bachelor degree}\\
 & \small Overall mark - 84\% \\
-& \textsc{Physics} \\ 
+& \textsc{Physics} \\
 & \textit{Vilnius University} \\
 & \small Focus on math and theoretical physics. \\
-	
+
 %----------------------------------------------------------------------------------------
 
 \end{tabular}\\[10pt]
@@ -211,7 +211,7 @@ Both applications are very successful with over a million downloads.}\\
 %	PROJECTS
 %----------------------------------------------------------------------------------------
 
-\section{Projects} 
+\section{Projects}
 
 \begin{tabular}{rl}
 
@@ -230,7 +230,7 @@ Both applications are very successful with over a million downloads.}\\
 %	COMPUTER SKILLS
 %----------------------------------------------------------------------------------------
 
-\section{Technical Skills} 
+\section{Technical Skills}
 
 \begin{tabular}{rl}
 Software development
@@ -248,7 +248,7 @@ Machine learning
 %	COMMUNICATION SKILLS
 %----------------------------------------------------------------------------------------
 
-\section{Communication Skills} 
+\section{Communication Skills}
 
 \begin{tabular}{rl}
 \textsc{Conferences}
@@ -260,7 +260,7 @@ Machine learning
 %	PUBLICATIONS
 %----------------------------------------------------------------------------------------
 
-\section{Publications} 
+\section{Publications}
 
 \begin{tabular}{rl}
 2012	 & \textbf{Ordered assemblies of triangular-shaped} \\
@@ -271,7 +271,7 @@ Machine learning
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
-	
+
 \end{minipage} % End right-hand side of the page
 
-\end{document}  
+\end{document}
