--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -177,7 +177,7 @@ Both applications are very successful with over a million downloads.}\\
 \raisebox{-4pt}{\textifsymbol{18}} & 819 Hamilton street, Vancouver, BC, Canada \\
 \raisebox{-3pt}{\Mobilefone} & +1 778 835 6923 \\
 \raisebox{-1pt}{\Letter} & \href{mailto:tautvydas.misiunas@gmail.com}{tautvydas.misiunas@gmail.com} \\
-\faLinkedin & \href{https://www.linkedin.com/pub/tautvydas-misiunas/26/b62/745}{Tautvydas} \\
+\faLinkedin & \href{https://www.linkedin.com/in/misiunas}{Tautvydas} \\
 \end{tabular}
 }
 }\\[10pt]
