Update CV with THG experience

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -24,7 +24,7 @@
 
 \documentclass[10pt]{article} % Font size - 10pt, 11pt or 12pt
 
-\usepackage[hmargin=1.25cm, vmargin=1.5cm]{geometry} % Document margins
+\usepackage[hmargin=1cm, vmargin=1cm]{geometry} % Document margins
 
 \usepackage{marvosym} % Required for symbols in the colored box
 \usepackage{ifsym} % Required for symbols in the colored box
@@ -81,7 +81,7 @@
 
 %----------------------------------------------------------------------------------------
 
-\begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
+\begin{minipage}[t]{0.58\textwidth} % Start the left-hand side of the page
 \vspace{0pt} % Trick for alignment
 
 %----------------------------------------------------------------------------------------
@@ -91,28 +91,44 @@
 \section{Work Experience}
 
 %------------------------------------------------
-% WORK EXPERIENCE 1
+% WORK EXPERIENCE THG - Manchester
 %------------------------------------------------
 
-{\raggedleft\textsc{Current, from Oct 2014}\par}
+{\raggedleft\textsc{Current, from Oct 2016}\par}
+
+{\raggedright\large Senior data scientist\\
+\textit{The Hut Group}, Manchester, United Kingdom\\[5pt]}
+
+\normalsize{Leading data science team of around 10 people. 
+Developed a forecasting solution to accurately predict customer demand for over 250k products.
+Optimised operation of distribution warehouse via ML methods.
+Implemented automated promotion strategy.}\\
+
+%------------------------------------------------
+% WORK EXPERIENCE Amazon
+%------------------------------------------------
+
+{\raggedleft\textsc{Oct 2014 - Sep 2016}\par}
 
 {\raggedright\large Software development engineer\\
-\textit{Amazon}, Edinburgh, United Kingdom\\[5pt]}
+\textit{Amazon}, United Kingdom and Canada\\[5pt]}
 
-\normalsize{Worked on the Dynamic Merchandising team
-which provides personalized content on Amazon services worldwide.
-Extended, a heavily human heuristics based, recommendation
-ranking system with machine learning models allowing flexible
-optimization as well as better customer experience via accurate personalization.
-Quickly prototyped new models and performed analysis in python
-while productionising best performing ideas in java.
-Developed smaller projects to detect adult content and to infer book language from the title.
-As part of massive and critical service I built tools that performed
-automated load tests pushing the service to the limit.
-This work ensured that on Cyber Monday Amazon worked without any glitches.}\\
+\normalsize{Designed and developed a payment disbursement 
+platform designed to resiliently handle \$100B+ payment throughput. 
+One of my primary focuses is fraud and duplicate detection modules that apply ML and fuzzy matching to achieve high performance.
+
+Worked on providing personalized content on Amazon website and services, such as Fire TV, worldwide.
+Extended a heavily human heuristics based recommendation
+ranking system with ML models allowing flexible
+optimization goals as well as better customer experience via accurate personalization.
+Quickly prototyped new models and performed analysis in Python
+while productionising best performing ideas in Java.
+Prototyped a book language inference model that works purely from the title of the book.
+Prototyped a model to detect adult content used to prevent inappropriate content on main Amazon website.
+Developed highly parallelisable code base that runs on a fleet of thousands of hosts.}\\
 
 %------------------------------------------------
-% WORK EXPERIENCE 2
+% WORK EXPERIENCE Ocado
 %------------------------------------------------
 
 {\raggedleft\textsc{Nov 2012 – Aug 2013}\par}
@@ -120,17 +136,15 @@ This work ensured that on Cyber Monday Amazon worked without any glitches.}\\
 {\raggedright\large Software developer\\
 \textit{Ocado}, London, United Kingdom\\[5pt]}
 
-\normalsize{Java back-end developer on MHE control team at Ocado,
-providing reliable real-time Java application responsible for
+\normalsize{Java back-end developer on MHE control team,
+providing a reliable, real-time application responsible for
 control over sixty interconnected conveyors and cranes.
 Developed an optimization module which exploits idle machines
 to improve physical inventory distribution.
-The module required improved routing routine within a continuously changing warehouse.
-Developed an unsupervised super-graph extraction
-(via Markov Clustering  Algorithm) based routing algorithm.}\\
+The module required improved routing routine within a continuously changing warehouse.}\\
 
 %------------------------------------------------
-% WORK EXPERIENCE 3
+% WORK EXPERIENCE Puslaidininkiu ketedra
 %------------------------------------------------
 
 {\raggedleft\textsc{Sep 2010 - June 2011}\par}
@@ -139,33 +153,31 @@ Developed an unsupervised super-graph extraction
 \textit{Center for Physical Sciences and Technology}, Vilnius, Lithuania\\[5pt]}
 
 \normalsize{Under the supervision of Prof. E. Tornau,
-I developed computational model to emulate the behavior
+ developed computational model to emulate the behavior
 of triangular-shaped molecules. We have extended existing
-phase models, such as Potts and Blume-Emery-Griffits,
-to support molecule's ability to settle down on the lattice.
+phase models, including Potts and Blume-Emery-Griffits,
+to support molecule's ability to settle ontothe lattice.
 The model successfully explained two structures which were observed in experiments.
-Furthermore, the model predicted a new structure and defined under what circumstances it forms.}\\
+The model predicted a new structure and defined under what circumstances it forms.}\\
 
 
 %------------------------------------------------
-% WORK EXPERIENCE 4
+% WORK EXPERIENCE Android
 %------------------------------------------------
 
 {\raggedleft\textsc{July 2012}\par}
 
-{\raggedright\large Android games\\
-\textit{Mobile app}\\[5pt]}
+{\raggedright\large Android games}%\\
+% \textit{Mobile app}\\[5pt]}
 
-\normalsize{I co-created two Android games that are free to download.
-Over the years I have been keeping the applications up to date with
-new releases and support for new Android versions.
+\normalsize{Co-created two Android free-to-play games.
 Both applications are very successful with over a million downloads.}\\
 
 %----------------------------------------------------------------------------------------
 
 \end{minipage} % End the left-hand side of the page
 \hfill
-\begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
+\begin{minipage}[t]{0.36\textwidth} % Start the right-hand side of the page
 \vspace{0pt} % Trick for alignment
 
 %----------------------------------------------------------------------------------------
@@ -173,9 +185,9 @@ Both applications are very successful with over a million downloads.}\\
 %----------------------------------------------------------------------------------------
 
 \colorbox{shade}{\textcolor{text1}{
-\begin{tabular}{c|p{7cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & 819 Hamilton street, Vancouver, BC, Canada \\
-\raisebox{-3pt}{\Mobilefone} & +1 778 835 6923 \\
+\begin{tabular}{c|p{6cm}}
+\raisebox{-4pt}{\textifsymbol{18}} & 54, 25 Chorlton st, Manchester, UK \\
+\raisebox{-3pt}{\Mobilefone} & +447585234606 \\
 \raisebox{-1pt}{\Letter} & \href{mailto:tautvydas.misiunas@gmail.com}{tautvydas.misiunas@gmail.com} \\
 \faLinkedin & \href{https://www.linkedin.com/in/misiunas}{Tautvydas} \\
 \end{tabular}
@@ -197,7 +209,7 @@ Both applications are very successful with over a million downloads.}\\
 & \small Focus on ML and data analysis. \\
 &\\
 
-2008 -- 2012 & \textbf{Bachelor degree}\\
+2012 & \textbf{Bachelor degree}\\
 & \small Overall mark - 84\% \\
 & \textsc{Physics} \\
 & \textit{Vilnius University} \\
@@ -215,10 +227,11 @@ Both applications are very successful with over a million downloads.}\\
 
 \begin{tabular}{rl}
 
-2015     & \textbf{Amazon internal mobile hackaton}\\
+2015     & \textbf{Amazon internal mobile hackathon}\\
 & \textit{Amazon}\\
 &\\
-2014     & \textbf{Msc thesis: Recommendation system for MMO games}\\
+2014     & \textbf{Recommendation system for MMO games}\\
+         & \textbf{MSc thesis}\\
 & \textit{The University of Edinburgh \& deltaDNA}\\
 &\\
 2013	 & \textbf{Short term movements in stock prices}\\
@@ -233,14 +246,12 @@ Both applications are very successful with over a million downloads.}\\
 \section{Technical Skills}
 
 \begin{tabular}{rl}
-Software development
-& \textsc{java}, \textsc{python}, Linux,\\
-& \textsc{jenkins}, maven, gradle,\\
-& \textsc{c++}, \textsc{bash}, \textsc{AWS}\\
-Machine learning
-& \textsc{Matlab}, \textsc{Octane}, \textsc{hadoop},\\
-& \textsc{scikit-learn}, \textsc{theano}, \textsc{weka},\\
-& \textsc{Amazon EML \& EMR} \\
+Software & \textsc{Java}, \textsc{Python}, \textsc{Scala}, Linux,\\
+development & \textsc{Jenkins}, maven, gradle,\\
+& \textsc{c++}, \textsc{bash}, \textsc{Ruby}, \textsc{AWS}, \textsc{GCP}\\
+Machine & \textsc{Matlab}, \textsc{Octane}, \textsc{Hadoop},\\
+learning & \textsc{Scikit-learn}, \textsc{Theano}, \textsc{Weka},\\
+& \textsc{Spark}, \textsc{Amazon EML \& EMR} \\
 & \\
 \end{tabular}
 
@@ -253,7 +264,7 @@ Machine learning
 \begin{tabular}{rl}
 \textsc{Conferences}
 & Amazon Machine \\
-& Learning Conference -- 2015\\
+& Learning Conference -- 2015, 2016\\
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
