Update THG experience.
Expanded with more technical details.

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -94,15 +94,21 @@
 % WORK EXPERIENCE THG - Manchester
 %------------------------------------------------
 
-{\raggedleft\textsc{Current, from Oct 2016}\par}
+{\raggedleft\textsc{Oct 2016 - Oct 2017}\par}
 
 {\raggedright\large Senior data scientist\\
 \textit{The Hut Group}, Manchester, United Kingdom\\[5pt]}
 
-\normalsize{Leading data science team of around 10 people. 
-Developed a forecasting solution to accurately predict customer demand for over 250k products.
-Optimised operation of distribution warehouse via ML methods.
-Implemented automated promotion strategy.}\\
+\normalsize{Tech lead for data science team of around 10 people. 
+Developed a forecasting solution that accurately predicts global 
+and regional customer demand. Scaled to a high number of product 
+lines (over 250k) by building a distributed application running 
+on Apache Spark and Google Dataproc.
+
+Optimised and automated promotion strategy for multiple webshops and locales.
+Reduced distribution warehouse costs by optimising operations such 
+as walking distance on the warehouse floor.
+Spearheaded cloud adoption within the company.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE Amazon
@@ -115,7 +121,8 @@ Implemented automated promotion strategy.}\\
 
 \normalsize{Designed and developed a payment disbursement 
 platform designed to resiliently handle \$100B+ payment throughput. 
-One of my primary focuses is fraud and duplicate detection modules that apply ML and fuzzy matching to achieve high performance.
+One of my primary focuses is fraud and duplicate detection modules 
+that apply ML and fuzzy matching to achieve high performance.
 
 Worked on providing personalized content on Amazon website and services, such as Fire TV, worldwide.
 Extended a heavily human heuristics based recommendation
@@ -165,13 +172,13 @@ The model predicted a new structure and defined under what circumstances it form
 % WORK EXPERIENCE Android
 %------------------------------------------------
 
-{\raggedleft\textsc{July 2012}\par}
+% {\raggedleft\textsc{July 2012}\par}
 
-{\raggedright\large Android games}%\\
+% {\raggedright\large Android games}%\\
 % \textit{Mobile app}\\[5pt]}
 
-\normalsize{Co-created two Android free-to-play games.
-Both applications are very successful with over a million downloads.}\\
+% \normalsize{Co-created two Android free-to-play games.
+% Both applications are very successful with over a million downloads.}\\
 
 %----------------------------------------------------------------------------------------
 
@@ -186,7 +193,7 @@ Both applications are very successful with over a million downloads.}\\
 
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{6cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & 54, 25 Chorlton st, Manchester, UK \\
+\raisebox{-4pt}{\textifsymbol{18}} & 25 Chorlton st, Manchester, UK \\
 \raisebox{-3pt}{\Mobilefone} & +447585234606 \\
 \raisebox{-1pt}{\Letter} & \href{mailto:tautvydas.misiunas@gmail.com}{tautvydas.misiunas@gmail.com} \\
 \faLinkedin & \href{https://www.linkedin.com/in/misiunas}{Tautvydas} \\
